--- a/HTML/displayCard.html
+++ b/HTML/displayCard.html
@@ -8,7 +8,7 @@ session_start();
 
 // Check if the user is logged in. If not, redirect to the login page.
 if (!isset($_SESSION['loggedin'])) {
-    header('Location: /420710/pokemon_collect_app_p2.html');
+    header('Location: /HTML/pokemon_collect_app_p2.html');
     exit;
 }
 ?>
@@ -22,14 +22,9 @@ if (!isset($_SESSION['loggedin'])) {
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Display Pokemon Card</title>
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="/CSS/layout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <style>
-        body {
-            background-image: url("Images/cool-background.png");
-            width: auto;
-        }
-
         .card-content {
             width: 100%;
             height: 100%;
@@ -65,105 +60,19 @@ if (!isset($_SESSION['loggedin'])) {
 </head>
 
 <body>
+    <!--Navbar Menu-->
     <header>
-        <div class="header">
-            <!--MENU-->
-            <div class="menu">
-                <nav>
-                    <input type="checkbox" id="show-search">
-                    <input type="checkbox" id="show-menu">
-                    <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
-                    <div class="menu_content">
-                        <div class="logo"><a href="#">CaLove</a></div>
-                        <ul class="links">
-                            <li><a href="/420710/index.html">Home</a></li>
-                            <li>
-                                <a href="#" class="desktop-link">HTML Code</a>
-                                <input type="checkbox" id="show-html">
-                                <label for="show-html">HTML Code</label>
-                                <ul>
-                                    <li><a href="Facts_About_Snowboarding.html">Facts about Snowboarding</a></li>
-                                    <li><a href="Facts_About_Apples.html">Facts about Apples</a></li>
-                                    <li><a href="Facts_About_Sushi.html">Facts about Sushi</a></li>
-                                    <li><a href="sortDemo.html">Sort Demo</a></li>
-                                    <li><a href="ButtonMove.html">Moving Buttons</a></li>
-                                    <li><a href="cards.html">Card Demo</a></li>
-                                    <li><a href="keypress.html">KeyPress Demo</a></li>
-                                    <li><a href="prime.html">Prime Numbers</a></li>
-                                    <li><a href="jQueryDemo.html">jQuery Demo</a></li>
-                                    <li><a href="dynamicCardDemo.html">Dynamic Card Demo</a></li>
-                                    <li><a href="AJAXandPHP.html">AJAX and PHP Demo</a></li>
-                                    <li><a href="audioDemo.html">Audio Demo</a></li>
-                                    <li><a href="DMMTExamples.html">DMMT Examples</a></li>
-                                    <li><a href="pokemon_collect_app_p1.html">Collect App Phase 1</a></li>
-                                    <li>
-                                        <a href="#" class="desktop-link">HTML with Pictures</a>
-                                        <input type="checkbox" id="show-htmlp">
-                                        <label for="show-htmlp">HTML with Pictures</label>
-                                        <ul>
-                                            <li><a href="Ski_Maps.html">Ski Maps</a></li>
-                                            <li><a href="Apple_Pictures.html">More Apple Pictures</a></li>
-                                            <li><a href="Sushi_Pictures.html">More Sushi Pictures</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">CSS Code</a>
-                                <input type="checkbox" id="show-css">
-                                <label for="show-css">CSS Code</label>
-                                <ul>
-                                    <li><a href="layout.css">layout.css</a></li>
-                                    <li><a href="ButtonMove.css">ButtonMove.css</a></li>
-                                    <li><a href="prime.css">prime.css</a></li>
-                                    <li><a
-                                            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">Font
-                                            File</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">JavaScript Code</a>
-                                <input type="checkbox" id="show-js">
-                                <label for="show-js">JavaScript Code</label>
-                                <ul>
-                                    <li><a href="chapter04.html">Chapter04.html</a></li>
-                                    <li><a href="ButtonMove.js">ButtonMove.js</a></li>
-                                    <li><a href="cards.js">cards.js</a></li>
-                                    <li><a href="prime.js">prime.js</a></li>
-                                    <li><a href="loops.js">loops.js</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">PHP Code</a>
-                                <input type="checkbox" id="show-php">
-                                <label for="show-php">PHP Code</label>
-                                <ul>
-                                    <li><a href="helloworld.php">Helloworld.php</a></li>
-                                    <li><a href="IO_app.php">PHP File I/O App</a></li>
-                                    <li><a href="seestore.php">seestore.php</a></li>
-                                    <li><a href="seestore_withJS.php">seestore_withJS.php</a></li>
-                                    <li><a href="showitem.php">showitem.php</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
-                    <form action="#" class="search-box">
-                        <input type="text" placeholder="Type Something to Search..." required>
-                        <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
-                    </form>
-                </nav>
-            </div>
-            <!--END OF MENU-->
-        </div>
+        <div class="header" id="navbar"></div>
     </header>
 
     <div class="wrapper">
         <nav>
             <div class="content_area">
-                <h1>Welcome to the Stats Page, <?php echo $_SESSION['name']; ?>!</h1>
-                <ul><a href="/phplogin/420710/pokemon_collect_app_p2.html" class="backTo">Go to Card Search</a></ul>
-                <ul><a href="/phplogin/420710/stats.html" class="backTo">Go to Card Statistics</a></ul>
+                <h1>Welcome to the Stats Page,
+                    <?php echo $_SESSION['name']; ?>!
+                </h1>
+                <ul><a href="/HTML/pokemon_collect_app_p2.html" class="backTo">Go to Card Search</a></ul>
+                <ul><a href="/HTML/stats.html" class="backTo">Go to Card Statistics</a></ul>
                 <ul><button id="addCardButton" class="backTo">Add to My Cards</button></ul>
                 <div class="card-content">
 
@@ -176,7 +85,7 @@ if (!isset($_SESSION['loggedin'])) {
                         <h1><strong>Sections</strong></h1>
                         <hr>
                         <li><a href="#" id="backButton">Back</a></li>
-                        <li><a href="/420710/index.html">Home</a><br></li>
+                        <li><a href="/HTML/index.html">Home</a><br></li>
                         <li><a href="mailto:calove@g.clemson.edu">Email</a></li>
                     </div>
                 </ul>
@@ -187,9 +96,9 @@ if (!isset($_SESSION['loggedin'])) {
                     <div class="navHead">
                         <h1><strong>Pages</strong></h1>
                         <hr>
-                        <li><a href="/phplogin/420710/about.html">About API</a></li>
-                        <li><a href="/phplogin/420710/pokemon_collect_app_p2.html">Pokemon Cards</a></li>
-                        <li><a href="/phplogin/420710/stats.html">Pokemon Stats</a></li>
+                        <li><a href="/HTML/about.html">About API</a></li>
+                        <li><a href="/HTML/pokemon_collect_app_p2.html">Pokemon Cards</a></li>
+                        <li><a href="/HTML/stats.html">Pokemon Stats</a></li>
                     </div>
                 </ul>
             </div>
@@ -200,6 +109,26 @@ if (!isset($_SESSION['loggedin'])) {
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
+        // Fetch the content of menu.html and insert it into the div with id "navbar"
+        fetch('menu.html')
+            .then(response => response.text())
+            .then(data => {
+                // Create a temporary element to parse the fetched HTML
+                const tempDiv = document.createElement('div');
+                tempDiv.innerHTML = data;
+
+                // Find the menu div within the fetched content
+                const menuContent = tempDiv.querySelector('.menu');
+
+                // Insert the menu content into the header div if it exists
+                if (menuContent) {
+                    document.getElementById('navbar').appendChild(menuContent);
+                } else {
+                    console.error('Menu content not found in menu.html');
+                }
+            })
+            .catch(error => console.error('Error loading the navbar:', error));
+
         // Add click event listener to the back button link
         document.getElementById("backButton").addEventListener("click", function () {
             // Go back to the previous page
@@ -224,41 +153,62 @@ if (!isset($_SESSION['loggedin'])) {
                 $('#cardDetails').html(cardDetailsHtml);
             }
 
-                // Send an AJAX POST request to the PHP script
-                $.ajax({
-                    type: 'POST',
-                    url: 'allPokemonUrl', // Replace with the actual URL of your PHP script
-                    dataType: 'json',
-                    success: function (response) {
-                        // The PHP script should return a success message or relevant data
-                        // You can update the UI or show a success message here
-                        alert('Card added to My Cards!');
-                    },
-                    error: function (xhr, status, error) {
-                        // Handle any errors that occurred during the AJAX request
-                        alert('Error adding the card to My Cards.');
-                        console.error(error);
-                    }
-                });
-
-                // Send an AJAX POST request to the PHP script
-                $.ajax({
-                    type: 'POST',
-                    url: 'http://localhost/phplogin/420710/PHP/addCard.php', // Replace with the actual URL of your PHP script
-                    data: cardData,
-                    dataType: 'json',
-                    success: function (response) {
-                        // The PHP script should return a success message or relevant data
-                        // You can update the UI or show a success message here
-                        alert('Card added to My Cards!');
-                    },
-                    error: function (xhr, status, error) {
-                        // Handle any errors that occurred during the AJAX request
-                        alert('Error adding the card to My Cards.');
-                        console.error(error);
-                    }
-                });
+            // Send an AJAX POST request to the PHP script
+            $.ajax({
+                type: 'POST',
+                url: 'allPokemonUrl', // Replace with the actual URL of your PHP script
+                dataType: 'json',
+                success: function (response) {
+                    // The PHP script should return a success message or relevant data
+                    // You can update the UI or show a success message here
+                    alert('Card added to My Cards!');
+                },
+                error: function (xhr, status, error) {
+                    // Handle any errors that occurred during the AJAX request
+                    alert('Error adding the card to My Cards.');
+                    console.error(error);
+                }
             });
+
+            // Send an AJAX POST request to the PHP script
+            $.ajax({
+                type: 'POST',
+                url: 'http://localhost/phplogin/420710/PHP/addCard.php', // Replace with the actual URL of your PHP script
+                data: cardData,
+                dataType: 'json',
+                success: function (response) {
+                    // The PHP script should return a success message or relevant data
+                    // You can update the UI or show a success message here
+                    alert('Card added to My Cards!');
+                },
+                error: function (xhr, status, error) {
+                    // Handle any errors that occurred during the AJAX request
+                    alert('Error adding the card to My Cards.');
+                    console.error(error);
+                }
+            });
+        });
+
+        // Fetch the content of menu.html and insert it into the div with id "navbar"
+        fetch('menu.html')
+            .then(response => response.text())
+            .then(data => {
+                // Create a temporary element to parse the fetched HTML
+                const tempDiv = document.createElement('div');
+                tempDiv.innerHTML = data;
+
+                // Find the menu div within the fetched content
+                const menuContent = tempDiv.querySelector('.menu');
+
+                // Insert the menu content into the header div if it exists
+                if (menuContent) {
+                    document.getElementById('navbar').appendChild(menuContent);
+                } else {
+                    console.error('Menu content not found in menu.html');
+                }
+            })
+            .catch(error => console.error('Error loading the navbar:', error));
+
 
     </script>
 </body>
