--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -56,12 +56,12 @@
                     <input type="checkbox" id="show-js">
                     <label for="show-js">JavaScript Code</label>
                     <ul class="dropdown-container">
-                        <li><a href="seestore_withJS.php.html">FINAL PROJECT</a></li>
-                        <li><a href="chapter04.html">Chapter04.html</a></li>
-                        <li><a href="ButtonMove.js">ButtonMove.js</a></li>
-                        <li><a href="cards.js">cards.js</a></li>
-                        <li><a href="prime.js">prime.js</a></li>
-                        <li><a href="loops.js">loops.js</a></li>
+                        <li><a href="/PHP/seestore_withJS.php">FINAL PROJECT</a></li>
+                        <li><a href="/HTML/chapter04.html">Chapter04.html</a></li>
+                        <li><a href="/JS/ButtonMove.js">ButtonMove.js</a></li>
+                        <li><a href="/JS/cards.js">cards.js</a></li>
+                        <li><a href="/JS/prime.js">prime.js</a></li>
+                        <li><a href="/JS/loops.js">loops.js</a></li>
                     </ul>
                 </li>
                 <li>
@@ -69,13 +69,13 @@
                     <input type="checkbox" id="show-php">
                     <label for="show-php">PHP Code</label>
                     <ul class="dropdown-container">
-                        <li><a href="pokemon_collect_app_p2.php">Collect App Phase 2</a></li>
-                        <li><a href="Exam2.php">Exam2.php</a></li>
-                        <li><a href="helloworld.php">Helloworld.php</a></li>
-                        <li><a href="IO_app.php">PHP File I/O App</a></li>
-                        <li><a href="seestore.php">seestore.php</a></li>
-                        <li><a href="seestore_withJS.php">seestore_withJS.php</a></li>
-                        <li><a href="showitem.php">showitem.php</a></li>
+                        <li><a href="/PHP/pokemon_collect_app_p2.php">Collect App Phase 2</a></li>
+                        <li><a href="/PHP/Exam2.php">Exam2.php</a></li>
+                        <li><a href="/PHP/helloworld.php">Helloworld.php</a></li>
+                        <li><a href="/PHP/IO_app.php">PHP File I/O App</a></li>
+                        <li><a href="/PHP/seestore.php">seestore.php</a></li>
+                        <li><a href="/PHP/seestore_withJS.php">seestore_withJS.php</a></li>
+                        <li><a href="/PHP/showitem.php">showitem.php</a></li>
                     </ul>
                 </li>
             </ul>
