Edited ButtonMove.html, and index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -88,6 +88,7 @@
                         <li><a href="/HTML/DMMTExamples.html">DMMT Examples</a></li>
                         <li><a href="/HTML/pokemon_collect_app_p1.html">Collect App Phase 1</a></li>
                         <li><a href="/HTML/insert_form.html">CREATE DB</a></li>
+                        <li><a href="/HTML/helloworld.html">Hello World!</a></li>
                         <hr>
                     </ul>
 
@@ -107,10 +108,11 @@
                     <ul>
                         <h2><strong>PHP</strong></h2>
                         <hr>
-                        <li><a href="/420710/pokemon_collect_app_p2.php">Collect App Phase 2</a></li>
-                        <li><a href="/phplogin/420710/Exam2.php">Exam2.php</a></li>
-                        <li><a href="/420710/helloworld.php">helloworld.php</a></li>
-                        <li><a href="/420710/IO_app.php">PHP File I/O App</a></li>
+                        <li><a href="/PHP/calove_CardCollectAppP2/pokemon_collect_app_p2.php">Collect App Phase Link 1</a></li>
+                        <li><a href="/PHP/pokemon_collect_app_p2.php">Collect App Phase Link 2</a></li>
+                        <li><a href="/PHP/Exam2.php">Exam2.php</a></li>
+                        <li><a href="/PHP/helloworld.php">helloworld.php</a></li>
+                        <li><a href="/PHP/IO_app.php">PHP File I/O App</a></li>
                         <li><a href="/420710/seestore.php">seestore.php</a></li>
                         <li><a href="/420710/seestore_withJS.php">seestore_withJS.php</a></li>
                         <li><a href="/420710/showitem.php">showitem.php</a></li>
@@ -120,11 +122,16 @@
                     <ul>
                         <h2><strong>CSS</strong></h2>
                         <hr>
-                        <li><a href="/420710/chapter04.html">Chapter04.html</a></li>
-                        <li><a href="/420710/cards.css">cards.css</a></li>
-                        <li><a href="/420710/prime.css">prime.css</a>
+                        <li><a href="/HTML/chapter04.html">Chapter04.html</a></li>
+                        <li><a href="/CSS/cards.css">cards.css</a></li>
+                        <li><a href="/CSS/prime.css">prime.css</a>
                         </li>
                         <hr>
+                    </ul>
+
+                    <ul>
+                        <h2><strong>Online Store</strong></h2><hr>
+                        <li><a href="/onlineStore/index.html">Online Store Index</a></li>
                     </ul>
 
                     <table>
@@ -149,7 +156,7 @@
                     <div class="navHead">
                         <h1><strong>Sections</strong></h1>
                         <hr>
-                        <li><a href="/420710/index.html">Home</a><br></li>
+                        <li><a href="/HTML/index.html">Home</a><br></li>
                         <li><a href="mailto:calove@g.clemson.edu">Email</a></li>
                     </div>
                 </ul>
